INTEGRATION: CWS qadev13 (1.3.30); FILE MERGED 2003/11/07 14:54:36 sg 1.3.30.1: #113007#CHG: fixed expensive constructor bug